# Tours_BOT

./: .env.example  .gitignore  COMMIT_PUSH_DEPLOY.md  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
app/: __init__.py  main.py
assets/: CURSOR_PROMPT_A6B_CATALOG_CONVERSION_GUIDED_ACTIONS.md  index.html
docs/: A1_ADMIN_AUTOMATION_COCKPIT_DESIGN_GATE.md  ADMIN_CONTENT_QUALITY_GATE.md  ADMIN_OPERATOR_WORKFLOW.md  ADMIN_OPS_CONVERSION_VISIBILITY_POLISH_DESIGN.md  ADMIN_OPS_CUSTOMER_SUMMARY_GATE.md  ADMIN_OPS_VISIBILITY_GATE.md  ADMIN_SHOWCASE_PUBLISH_RUNBOOK.md  AI_ASSISTANT_SPEC.md  AI_DIALOG_FLOWS.md  AI_PUBLIC_COPY_FACT_LOCK_CONTRACT.md  B10.4-full-bus-fixed-charter-reservation-execution.md  B10.5-full-bus-boarding-fallback-fix.md  B10_6_BOT_AS_ROUTER_DESIGN_GATE.md  B10_X_SYNC_CHECKPOINT_2026.md  B12_SHOWCASE_MARKETING_TEMPLATE_LIBRARY.md  B13C_PUBLISH_ATTEMPT_AUDIT_DESIGN.md  B13G_PRODUCTION_PUBLISH_AUDIT_SMOKE_RUNBOOK.md  B13_CHANNEL_ADAPTER_DESIGN.md  B14A_CHANNEL_LINK_AND_RESERVATION_READINESS_DIAGNOSTIC.md  B14D_TOUR6_BOARDING_REMEDIATION_AND_PREP_SMOKE_RUNBOOK.md  B14E_TEMP_HOLD_EXPIRY_RELEASE_DIAGNOSTIC.md  B14G_RECORD_TEMP_HOLD_EXPIRY_FIX_PRODUCTION_RESULT.md  B15B_READ_ONLY_ADMIN_PUBLISHING_CONSOLE.md  B15C5_DIRECT_MINI_APP_LINK_PRODUCTION_SMOKE_RESULT.md  B15C_EXACT_CTA_CHAIN_CLOSURE_CHECKPOINT.md  B15C_PRODUCTION_SMOKE_RESULT.md  B15C_SUPPLIER_OFFER_EXACT_TOUR_CTA_GATE.md  B15D_ADMIN_PUBLISHING_CONSOLE_RICH_READ_VIEW.md  B15E2_PUBLISHING_CONSOLE_PREPARE_CHAIN_SMOKE.md  B15E_ADMIN_PUBLISHING_CONSOLE_ACTION_AFFORDANCES_DESIGN.md  (+825 more)
(+503 files in other folders)
